--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -388,6 +388,37 @@
 											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.contenutiEvento')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.contenutiEvento')}__}"></div>
 										</div>
 
+										<!-- TEMATICHE SPECIALI DI INTERESSE NAZIONALE o REGIONALE (attivo se selezionato ALTRO) -->
+										<div class="item form-group tematica_interesse" style="display: none;" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tematicaInteresse')} ? 'bad'">
+											<div class="col-xs-1"></div>
+											<label class="control-label col-md-3 col-sm-3 col-xs-11">
+												<span th:text="#{label.tematica_interesse_speciale}"></span>
+												<span class="required">*</span>
+											</label>
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+												<select id="tematica_interesse"
+													class="selectpicker"
+													th:field="${eventoWrapper.evento.tematicaInteresse}"
+													data-width="100%" data-style="btn-primary"
+													data-actions-box="true" data-size="10"
+													data-hide-disabled="false"
+													title="Seleziona una tematica..." th:disabled="${isRiedizione or isEditSemiBloccato}">
+													<optgroup class="optgroup-primary"
+														th:each="tipologiaTematicaInteresse, row: ${T(it.tredi.ecm.dao.enumlist.TipologiaTematicheInteresseEnum).values()}"
+														th:label="${tipologiaTematicaInteresse.nome}"
+														th:remove="all-but-first">
+														<option
+															th:each="tematica, row: ${T(it.tredi.ecm.dao.enumlist.TematicheInteresseEnum).values()}"
+															th:if="${tematica.tipo == tipologiaTematicaInteresse}"
+															th:value="${tematica}"
+															th:text="${tematica.nome}">
+														</option>
+													</optgroup>
+												</select>
+											</div>
+											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tematicaInteresse')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.tematicaInteresse')}__}"></div>
+										</div>
+
 										<div class="divider-dashed"></div>
 
 										<!-- TITOLO -->
@@ -1668,6 +1699,7 @@
 // 					if([[${RESWorkshopInterattivo != null and RESWorkshopInterattivo == true}]])
 // 						$("#modale-alert-interattivi").modal("show");
 
+					alert('docReady EventoRESEdit');
 				});
 
 				function initAll(){
@@ -1961,6 +1993,7 @@
 				}
 				//funzione che setta gli event linstener ai vari input dell'evento RES
 				function handleListenerEventsCampsRES(){
+					//tematica speciali di interesse
 
 					//gestione evento iCheck su radio riguardante la lingua
 					$(".lingua").on("ifChecked", function() {
@@ -2458,7 +2491,7 @@
 				}
 
 				function reloadSection(selectedTab){
-					//alert('reloadSection: ' + selectedTab);
+					alert('reloadSection: ' + selectedTab);
 					if(selectedTab == 'tab1'){
 						sendAjaxReloadSection('1');
 					}else if(selectedTab == 'tab2'){
