--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -392,6 +392,8 @@
 		        $("form").submit(function( event ) {
 					$('form > input[type=submit]').prop("disabled", true);
 			    });
+
+		        initEventiComponents();
 			});
 
 			//rimuove class bad (errore validazione) dagli input (le select sono gestite su gentella.validator.validator.js unmark)
@@ -455,46 +457,46 @@
 						$element.iCheck('check');
 				});
 			}
-			
-			//no active other fields when [Sostituzione Intera Anagrafica] is checked 
+
+			//no active other fields when [Sostituzione Intera Anagrafica] is checked
 			function selezionaTuttiDisabled(){
 				//disabled checkboxs
 				$.each($('input[name=selected]') && $('input[id!=selected1]'), function(i, element){
 					$element = $(element);
 					$element.iCheck('disable');
 					$element.iCheck('unCheck');
-					    
+
 				});
-				
+
 				//disabled textareas
 				$("textarea").each(function(){
-					//FULL is the string included in id of textarea for [Sostituzione Intera Anagrafica] 
+					//FULL is the string included in id of textarea for [Sostituzione Intera Anagrafica]
 					if (!($(this).attr("id").includes("FULL"))){
 						$(this).attr('disabled', 'disabled');
 						$(this).val('');
 					}
-				}); 
+				});
 			}
-			
-			//active other fields when [Sostituzione Intera Anagrafica] is unchecked 
+
+			//active other fields when [Sostituzione Intera Anagrafica] is unchecked
 			function selezionaTuttiEnabled(){
 				//enabled checkboxes
 				$.each($('input[name=selected]') && $('input[id!=selected1]'), function(i, element){
 					$element = $(element);
 					$element.iCheck('enable');
 				});
-				
+
 				//enabled textareas
 				$("textarea").each(function(){
 					//FULL is the string included in id of textarea for [Sostituzione Intera Anagrafica]
 					if (!($(this).attr("id").includes("FULL"))){
 						$(this).attr("disabled", false);
-						
+
 					}
-				}); 
+				});
 			}
-			
-			
+
+
 
 			function confirmDeleteEventoModal(providerId,eventoId,tipo,codiceIdentificativo,stato){
 			    $('#deleteModal').modal();
@@ -544,6 +546,16 @@
 			    	$('#deleteMsg').html("<h2>Si desidera eliminare definitivamente tutti gli eventi dal Piano Formativo?</h2>");
 
 				$('#deleteButton').html("<a class='btn btn-danger' href='" + url + "'>Elimina</a>");
+			}
+
+			/*
+			* inizializziamo qui eventuali init sui widget dei plugin, perchè nel docReady di eventoEdit/eventoXXXEdit non siamo sicuri dell'avvenuta inizializzazione
+			*/
+			function initEventiComponents(){
+			 	$(".contenuto").on("ifChecked", function() {
+					mostraNascondiRadioPrimaInfanzia($(this).val(), $(".sponsor:checked").val());
+					mostraNascondiTematicheInteresse($(this).val());
+				});
 			}
 
 			/*]]>*/
