--- a/src/main/resources/templates/evento/eventoFSCShow.html
+++ b/src/main/resources/templates/evento/eventoFSCShow.html
@@ -70,6 +70,16 @@
 						</div>
 					</div>
 
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.contenutiEvento == T(it.tredi.ecm.dao.enumlist.ContenutiEventoEnum).ALTRO and @eventoServiceController.isVersionTre(eventoWrapperShow.evento)}">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show" th:text="#{label.tematica_interesse_speciale}">Tematica Speciale di interesse Nazionale o Regionale</span>
+						</label>
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.tematicaInteresse != null}" th:text="${eventoWrapperShow.evento.tematicaInteresse.nome}"></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.tematicaInteresse != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
+
 					<div class="divider-dashed"></div>
 
 					<!-- TITOLO -->
@@ -182,8 +192,8 @@
 							<div class="value danger" th:unless="${eventoWrapperShow.evento.tipologiaEventoFSC != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and 
-					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and 
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and
+					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and
 					@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.eventofsc_tipologiaSperimentazione}">Tipologia sperimentazione</span>
@@ -290,10 +300,10 @@
 												<th th:text="#{label.cf}">CF</th>
 												<th th:text="#{label.qualifica}">Qualifica</th>
 												<th th:text="#{label.cv}">CV</th>
-												<th 
+												<th
 													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}" th:text="#{label.identificativo_persona_evento_responsabile}">Identificativo Responsabile</th>
-												<th 
-												th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}" 
+												<th
+												th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}"
 												th:text="#{label.svolge_attivita_docenza}">Svolge attivita di docenza</th>
 											</tr>
 										</thead>
@@ -307,14 +317,14 @@
 													<a th:if="${persona.anagrafica.cv?.id}" th:text="${persona.anagrafica?.cv.nomeFile}" th:href="@{|/file/${persona.anagrafica.cv.id}|}"></a>
 													<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
 												</td>
-												<td 
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and 
-													persona != null}" 
+												<td
+													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and
+													persona != null}"
 													th:text="${persona.identificativoPersonaRuoloEvento?.nome}">
 												</td>
-												<td 
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and 
-													persona != null}" 
+												<td
+													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and
+													persona != null}"
 													th:text="${persona.svolgeAttivitaDiDocenza} ? #{label.sì} : #{label.no}">
 												</td>
 											</tr>
@@ -327,7 +337,7 @@
 							<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					
+
 					<!-- ESPERTI -->
 					<div class="item form-group" th:if="${eventoWrapperShow.esperti != null and !#sets.isEmpty(eventoWrapperShow.esperti) and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
@@ -367,7 +377,7 @@
 							<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					
+
 					<!-- COORDINATORI -->
 					<div class="item form-group" th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
@@ -406,7 +416,7 @@
 							<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					
+
 					<!-- INVESTIGATORI -->
 					<div class="item form-group" th:if="${eventoWrapperShow.investigatori != null and !#sets.isEmpty(eventoWrapperShow.investigatori) and eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
@@ -816,7 +826,7 @@
 							<div class="value danger" th:unless="${eventoWrapperShow.evento.proceduraVerificaQualitaPercepita != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					
+
 					<!-- REDAZIONE DI UN DOCUMENTO CONCLUSIVO -->
 					<div class="item form-group" th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
@@ -827,7 +837,7 @@
 							<div class="value danger" th:unless="${eventoWrapperShow.evento.previstaRedazioneDocumentoConclusivo != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					
+
 					<!-- PRESENTE TUTOR ESPERTO ESTERNO VALIDATORE -->
 					<div class="item form-group" th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
