--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -402,6 +402,7 @@
 													data-width="100%" data-style="btn-primary"
 													data-actions-box="true" data-size="10"
 													data-hide-disabled="false"
+													onchange="updateObiettiviNazionali(this)"
 													title="Seleziona una tematica..." th:disabled="${isRiedizione or isEditSemiBloccato}">
 													<optgroup class="optgroup-primary"
 														th:each="tipologiaTematicaInteresse, row: ${T(it.tredi.ecm.dao.enumlist.TipologiaTematicheInteresseEnum).values()}"
@@ -411,7 +412,8 @@
 															th:each="tematica, row: ${T(it.tredi.ecm.dao.enumlist.TematicheInteresseEnum).values()}"
 															th:if="${tematica.tipo == tipologiaTematicaInteresse}"
 															th:value="${tematica}"
-															th:text="${tematica.nome}">
+															th:text="${tematica.nome}"
+															th:disabled="${tematica.tipo == T(it.tredi.ecm.dao.enumlist.TipologiaTematicheInteresseEnum).REGIONALE}">
 														</option>
 													</optgroup>
 												</select>
@@ -1698,8 +1700,6 @@
 
 // 					if([[${RESWorkshopInterattivo != null and RESWorkshopInterattivo == true}]])
 // 						$("#modale-alert-interattivi").modal("show");
-
-					alert('docReady EventoRESEdit');
 				});
 
 				function initAll(){
@@ -2491,7 +2491,6 @@
 				}
 
 				function reloadSection(selectedTab){
-					alert('reloadSection: ' + selectedTab);
 					if(selectedTab == 'tab1'){
 						sendAjaxReloadSection('1');
 					}else if(selectedTab == 'tab2'){
