--- a/src/main/resources/templates/evento/eventoRESShow.html
+++ b/src/main/resources/templates/evento/eventoRESShow.html
@@ -70,6 +70,16 @@
 						</div>
 					</div>
 
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.contenutiEvento == T(it.tredi.ecm.dao.enumlist.ContenutiEventoEnum).ALTRO and @eventoServiceController.isVersionTre(eventoWrapperShow.evento)}">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show" th:text="#{label.tematica_interesse_speciale}">Tematica Speciale di interesse Nazionale o Regionale</span>
+						</label>
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.tematicaInteresse != null}" th:text="${eventoWrapperShow.evento.tematicaInteresse.nome}"></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.tematicaInteresse != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
+
 					<div class="divider-dashed"></div>
 
 					<!-- TITOLO -->
@@ -251,7 +261,7 @@
 							<div class="value danger" th:unless="${eventoWrapperShow.evento.titoloConvegno != null and !#strings.isEmpty(eventoWrapperShow.evento.titoloConvegno)}" th:text="#{label.dato_non_inserito}"></div>
 							</div>
 					</div>
-					
+
 					<!-- NUMERO PARTECIPANTI PER CORSO -->
 					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoRES == T(it.tredi.ecm.dao.enumlist.TipologiaEventoRESEnum).CORSO_AGGIORNAMENTO and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
