--- a/src/main/resources/templates/evento/eventoFSCShow.html
+++ b/src/main/resources/templates/evento/eventoFSCShow.html
@@ -194,7 +194,7 @@
 					</div>
 					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and
 					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and
-					@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.eventofsc_tipologiaSperimentazione}">Tipologia sperimentazione</span>
 						</label>
@@ -301,9 +301,9 @@
 												<th th:text="#{label.qualifica}">Qualifica</th>
 												<th th:text="#{label.cv}">CV</th>
 												<th
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}" th:text="#{label.identificativo_persona_evento_responsabile}">Identificativo Responsabile</th>
+													th:if="${@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}" th:text="#{label.identificativo_persona_evento_responsabile}">Identificativo Responsabile</th>
 												<th
-												th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}"
+												th:if="${@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}"
 												th:text="#{label.svolge_attivita_docenza}">Svolge attivita di docenza</th>
 											</tr>
 										</thead>
@@ -318,12 +318,12 @@
 													<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
 												</td>
 												<td
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and
+													th:if="${@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento) and
 													persona != null}"
 													th:text="${persona.identificativoPersonaRuoloEvento?.nome}">
 												</td>
 												<td
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and
+													th:if="${@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento) and
 													persona != null}"
 													th:text="${persona.svolgeAttivitaDiDocenza} ? #{label.sì} : #{label.no}">
 												</td>
@@ -339,7 +339,7 @@
 					</div>
 
 					<!-- ESPERTI -->
-					<div class="item form-group" th:if="${eventoWrapperShow.esperti != null and !#sets.isEmpty(eventoWrapperShow.esperti) and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					<div class="item form-group" th:if="${eventoWrapperShow.esperti != null and !#sets.isEmpty(eventoWrapperShow.esperti) and @eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.esperti}">Esperti</span>
 						</label>
@@ -379,7 +379,7 @@
 					</div>
 
 					<!-- COORDINATORI -->
-					<div class="item form-group" th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					<div class="item form-group" th:if="${@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.coordinatori}">Coordinatori</span>
 						</label>
@@ -418,7 +418,7 @@
 					</div>
 
 					<!-- INVESTIGATORI -->
-					<div class="item form-group" th:if="${eventoWrapperShow.investigatori != null and !#sets.isEmpty(eventoWrapperShow.investigatori) and eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					<div class="item form-group" th:if="${eventoWrapperShow.investigatori != null and !#sets.isEmpty(eventoWrapperShow.investigatori) and eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and @eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.investigatori}">Esperti</span>
 						</label>
@@ -828,7 +828,7 @@
 					</div>
 
 					<!-- REDAZIONE DI UN DOCUMENTO CONCLUSIVO -->
-					<div class="item form-group" th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					<div class="item form-group" th:if="${@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.prevista_redazione_documento_conclusivo}">E’ prevista la redazione di un documento conclusivo quale ad es. linee guida, procedure, protocolli, indicazioni operative?</span>
 						</label>
@@ -839,7 +839,7 @@
 					</div>
 
 					<!-- PRESENTE TUTOR ESPERTO ESTERNO VALIDATORE -->
-					<div class="item form-group" th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					<div class="item form-group" th:if="${@eventoServiceController.isVersionDueOrHigh(eventoWrapperShow.evento)}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.presente_tutor_esperto_esterno_validatore}">E’ presente un Tutor esperto esterno che validi le attività del gruppo?</span>
 						</label>
