#16902 - vaschetta per eventi con condivisione esiti valutazione

--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -2376,6 +2376,7 @@
 
 						if(extraType == 'PAUSA' || extraType == 'VALUTAZIONE APPRENDIMENTO' || extraType == 'REGISTRAZIONE PARTECIPANTI' || extraType == 'SALUTI INTRODUTTIVI'){
 							$("#container-titleNoPausa").hide();
+							$("#container-condivisioneEsitiValutazione").hide();
 
 							if(extraType == 'PAUSA'){
 								$("#container-titlePausa").show();
