--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -560,38 +560,36 @@
 										<span th:text="#{label.obiettivo_strategico_nazionale}">Obiettivo Strategico Nazionale</span>
 										<span class="required">*</span>
 									</label>
-									<th:block th:unless="${eventoWrapper.evento.isEventoDaPianoFormativo() and !#authentication.principal.hasProfile('SEGRETERIA')}">
-										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-											<select id="obiettivoNazionale"
-												class="selectpicker required"
-												th:field="${eventoWrapper.evento.obiettivoNazionale}"
-												data-width="100%" data-style="btn-primary"
-												data-actions-box="true" data-size="10"
-												data-hide-disabled="false"
-													title="Seleziona un obiettivo..." th:disabled="${isRiedizione or isFromPianoFormativo or isEditSemiBloccato}">
-												<optgroup class="optgroup-primary"
-													th:each="categoriaObiettivoNazionale, row: ${T(it.tredi.ecm.dao.enumlist.CategoriaObiettivoNazionale).values()}"
-													th:label="${categoriaObiettivoNazionale.nome}"
-													th:remove="all-but-first">
-													<option
-														th:each="obiettivoNazionale, row: ${eventoWrapper.obiettiviNazionali}"
-														th:if="${obiettivoNazionale.categoria == categoriaObiettivoNazionale}"
-														th:value="${obiettivoNazionale.id}"
-														th:text="${obiettivoNazionale.nome}">
-													</option>
-												</optgroup>
-											</select>
-										</div>
-										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.obiettivoNazionale')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.obiettivoNazionale')}__}"></div>
-										<div class="col-xs-1">
-											<div th:attr="data-original-title=#{label.info_tooltip_obiettivo_nazionale}" class="btn btn-default no-margin cursor-default" data-toggle="tooltip" data-placement="top"><i class="fa fa-info-circle"></i></div>
-										</div>
-									</th:block>
-									<th:block th:if="${eventoWrapper.evento.isEventoDaPianoFormativo() and !#authentication.principal.hasProfile('SEGRETERIA')}">
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
+										<select id="obiettivoNazionale"
+											class="selectpicker required"
+											th:field="${eventoWrapper.evento.obiettivoNazionale}"
+											data-width="100%" data-style="btn-primary"
+											data-actions-box="true" data-size="10"
+											data-hide-disabled="false"
+												title="Seleziona un obiettivo..." th:disabled="${isRiedizione or isFromPianoFormativo or isEditSemiBloccato}">
+											<optgroup class="optgroup-primary"
+												th:each="categoriaObiettivoNazionale, row: ${T(it.tredi.ecm.dao.enumlist.CategoriaObiettivoNazionale).values()}"
+												th:label="${categoriaObiettivoNazionale.nome}"
+												th:remove="all-but-first">
+												<option
+													th:each="obiettivoNazionale, row: ${eventoWrapper.obiettiviNazionali}"
+													th:if="${obiettivoNazionale.categoria == categoriaObiettivoNazionale}"
+													th:value="${obiettivoNazionale.id}"
+													th:text="${obiettivoNazionale.nome}">
+												</option>
+											</optgroup>
+										</select>
+									</div>
+									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.obiettivoNazionale')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.obiettivoNazionale')}__}"></div>
+									<div class="col-xs-1">
+										<div th:attr="data-original-title=#{label.info_tooltip_obiettivo_nazionale}" class="btn btn-default no-margin cursor-default" data-toggle="tooltip" data-placement="top"><i class="fa fa-info-circle"></i></div>
+									</div>
+									<!-- th:block th:if="${eventoWrapper.evento.isEventoDaPianoFormativo() and !#authentication.principal.hasProfile('SEGRETERIA')}">
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 											<div th:text="${eventoWrapper.evento.obiettivoNazionale.nome}" class="value-edit"></div>
 										</div>
-									</th:block>
+									</th:block  -->
 								</div>
 
 								<!-- OBIETTIVO REGIONALE -->
