--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -25,6 +25,28 @@
 		  </div>
 		<!-- Modal ends here -->
 
+		<!-- modal starts here -->
+		<div id="marcaNoEcmModal" class="modal fade" role='dialog'>
+		    <div class="modal-dialog">
+		        <div class="modal-content">
+		            <div class="modal-header">
+		                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		                <h4 class="modal-title" th:text="#{label.conferma_azione}">Delete </h4>
+		            </div>
+		            <div class="modal-body">
+		                <span id="marcaNoEcmMsg"></span>
+
+		            </div>
+		            <div class="modal-footer">
+		                <button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{label.indietro}">Cancel</button>
+						<span id='marcaNoEcmButton'></span>
+		            </div>
+
+		        </div>
+		      </div>
+		  </div>
+		<!-- Modal ends here -->
+
 		<!-- loading image div -->
 		<div id="loadingImg"></div>
 
@@ -513,6 +535,17 @@
 					$('#deleteButton').html("<a class='btn btn-danger' href='" + url + "'>Elimina</a>");
 			    }
 			}
+
+			function confirmMarcaNoEcmEventoModal(providerId,eventoId,tipo,codiceIdentificativo,stato){
+			    $('#marcaNoEcmModal').modal();
+
+			    var prefix = [[@{/provider/}]];
+			    var url = prefix + providerId + "/evento/" + eventoId + "/marcaNoEcm";
+
+		    	$('#marcaNoEcmMsg').html("<h2>Si desidera marcare definitivamente come NO ECM l'evento " + codiceIdentificativo + " (" + tipo + ")?</h2>");
+				$('#marcaNoEcmButton').html("<a class='btn btn-danger' href='" + url + "'>Marca</a>");
+			}
+
 
 			function confirmDeleteEventoPianoFormativoModal(providerId,pianoFormativoId,eventoId,prefixUrl,tipo,codiceIdentificativo){
 			    $('#deleteModal').modal();
