--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -1642,8 +1642,8 @@
 						$(".ottenutoComitatoEtico").slideDown("slow");
 						$("#sperimentazioneClinicaSiId").iCheck('disable');
 					}else {
-						$("#sperimentazioneClinicaSiId").iCheck('uncheck');
-						$("#sperimentazioneClinicaNoId").iCheck('uncheck');
+/*  						$("#sperimentazioneClinicaSiId").iCheck('uncheck');
+						$("#sperimentazioneClinicaNoId").iCheck('uncheck'); */
 						$(".ottenutoComitatoEtico").slideUp("slow");
 						$(".ottenutoComitatoEtico").find('span[class=required]').show();
 						$("#sperimentazioneClinicaSiId").iCheck('enable');
