--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -169,7 +169,7 @@
 										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.osservatoreRegionale')} ? 'bad'">
 											<label class="control-label col-md-4 col-sm-4 col-xs-12" for="osservatoreRegionale">
 												<span th:text="#{label.osservatore_regionale}">Osservatore Regionale</span>
-												<span class="required">*</span>
+												<span th:unless="${@providerServiceController.isAccreditamentoStandardRinnovoForProvider(accreditamentoWrapper.accreditamento.id,accreditamentoWrapper.provider.id)}" class="required">*</span>
 											</label>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<select id="osservatoreRegionale"
