--- a/src/main/resources/templates/evento/eventoRESShow.html
+++ b/src/main/resources/templates/evento/eventoRESShow.html
@@ -710,7 +710,7 @@
 							<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
-					<th:block>
+					<th:block th:if="${eventoWrapperShow.evento.isAlimentiPrimaInfanzia()}">
 						<!-- RADIO SPONSOR PRIMA INFANZIA -->
 						<div class="item form-group">
 							<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
